--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header class="app-header">
       <div class="brand">Mouth Tracker</div>
+      <div id="storage-status" class="storage-status">Storage: Local</div>
       <nav class="top-nav">
         <button class="nav-btn" data-screen="home">Home</button>
         <button class="nav-btn" data-screen="new-game">New Game</button>
